# blitzy-c-compiler

./: .gitignore  AGENTS.md  Cargo.toml  README.md  bcc_vs_ccc_comparison_report.md  clippy.toml  go.mod  rustfmt.toml
.cargo/: config.toml
.github/workflows/: checkpoints.yml  ci.yml
blitzy/documentation/: Project Guide.md  Technical Specifications.md
docs/: abi_reference.md  architecture.md  elf_format.md  gcc_extensions.md  kernel_boot.md  validation_checkpoints.md
gophc-bcc/: common-define.md  frontend-lexer-define.md  frontend-sema-define.md  lib.rs  main.rs  rust-common-def.md  rust-frontend-lexer-def.md  rust-frontend-parser-def.md  rust-frontend-preprocessor-def.md  rust-frontend-sema-def.md
gophc-bcc/backend/: register_allocator.rs
gophc-bcc/common/: diagnostics.go  encoding.go  fx_hash.go  long_double.go  source_map.go  string_interner.go  string_interner.rs  target.go  target.rs  temp_files.go  temp_files.rs  type_builder.go  types.go  types.rs
gophc-bcc/ir/: basic_block.rs  instructions.rs  mod.rs  types.rs
gophc-bcc/passes/: adce.rs  constant_folding.rs  (+5 more)
include/: arm_neon.h  emmintrin.h  immintrin.h  nmmintrin.h  pmmintrin.h  smmintrin.h  stdalign.h  stdarg.h  stdbool.h  stddef.h  stdnoreturn.h  tmmintrin.h  x86intrin.h  xmmintrin.h
src/: lib.rs  main.rs
tests/: checkpoint1_hello_world.rs  checkpoint2_language.rs  checkpoint3_internal.rs  checkpoint4_shared_lib.rs  checkpoint5_security.rs  checkpoint6_kernel.rs  checkpoint7_stretch.rs  regression_bugs.rs  regression_chibicc.rs  regression_fuzz.rs  regression_regehr.rs  regression_sqlite.rs
(+214 files in other folders)
