[package]
name = "bcc"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
description = "Blitzy's C Compiler - a zero-dependency C11 compiler targeting Linux ELF for x86-64, i686, AArch64, and RISC-V 64"

[[bin]]
name = "bcc"
path = "src/main.rs"

[lib]
name = "bcc"
path = "src/lib.rs"

[dependencies]
# Zero dependencies — mandated by project requirements

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
